--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="styles.css">
+  <head>
+ <head<link rel="stylesheet" href="styles.css">/>head
+  </head>
 <body>
 
 <h1>My First Heading</h1>
